--- a/tmpl/auxiliar/Model.tmpl
+++ b/tmpl/auxiliar/Model.tmpl
@@ -2,7 +2,7 @@
 <% c++ #include "../src/logic/ViewContent.h" %>
 
 <% skin pci_skin %>
-	<% view <TO_DEFINE>_view uses ViewContent::<TO_DEFINE> %>
+	<% view <TO_DEFINE>_page_view uses ViewContent::<TO_DEFINE> extends page_template_view %>
 		
 		
 		<% template page_title() %>
@@ -10,15 +10,11 @@
 		
 		
 		<% template head_content() %>
-			<% include <% include template_view::head_content() %>
+			<% include template_view::head_content() %>
 		<% end template %>
 		
 		
 		<% template body_content() %>
-		<% end template %>
-		
-		
-		<% template js_head_code() %>
 		<% end template %>
 		
 		
