--- a/tmpl/auxiliar/PageTemplate.tmpl
+++ b/tmpl/auxiliar/PageTemplate.tmpl
@@ -2,7 +2,7 @@
 <% c++ #include "../src/logic/ViewContent.h" %>
 
 <% skin pci_skin %>
-	<% view template_view uses ViewContent::SessionContent %>
+	<% view page_template_view uses ViewContent::SessionContent %>
 		
 		
 		<% template page_title() %>
@@ -10,11 +10,13 @@
 		
 		
 		<% template head_content() %>
+			<link href="/lib/jquery-ui/ui-lightness/jquery-ui-1.10.0.custom.min.css" rel="stylesheet" type="text/css" />
 			<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 			<link href="/lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
 			<link href="/css/template.css" rel="stylesheet" type="text/css" />
 			
 			<script src="/lib/jquery/jquery-1.9.0.min.js"></script>
+			<script src="/lib/jquery-ui/jquery-ui-1.10.0.custom.min.js"></script>
 			<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
 			<script src="/js/global.js"></script>
 			<script src="/js/logic.js"></script>
