--- a/tmpl/pages/IdeasPage.tmpl
+++ b/tmpl/pages/IdeasPage.tmpl
@@ -2,35 +2,32 @@
 <% c++ #include "../src/logic/ViewContent.h" %>
 
 <% skin pci_skin %>
-	<% view ideas_view uses ViewContent::TemplateContent extends template_view %>
-	
-	
-		<% template css_links() %>
-			<% include template_view::css_links() %>
-			<link href="/css/ideas.css" rel="stylesheet" type="text/css" />
+	<% view ideas_page_view uses ViewContent::SessionContent extends page_template_view %>
+		
+		
+		<% template page_title() %>
+			Ideas - PCI
 		<% end template %>
-	
-	
-		<% template javascript_code() %>
-			<% include template_view::javascript_code() %>
-			<script>
-			$(document).ready(function() {
-				setActiveNavigationButton('pci_navigation_menu_ideas_button');
-			});
-			</script>
+		
+		
+		<% template head_content() %>
+			<% include page_template_view::head_content() %>
 		<% end template %>
-	
-	
-		<% template page_content() %>
-			<% include template_view::header_bar() %>
-			<% include template_view::navigation_menu() %>
-			<div class="main-container">
-				<div class="header-padding">
-					Ideas content
-				</div>
+		
+		
+		<% template body_content() %>
+			<% include header_bar() using template_view %>
+			<% include navigation_menu() using template_view %>
+			<div class="narrow header-bar-padding" id="main-container">
+				Ideas
 			</div>
 		<% end template %>
-	
-	
+		
+		
+		<% template js_body_code() %>
+			$('#ideas-button').addClass('active');
+		<% end template %>
+		
+		
 	<% end view %>
 <% end skin %>
