--- a/tmpl/pages/NewSolutionPage.tmpl
+++ b/tmpl/pages/NewSolutionPage.tmpl
@@ -2,41 +2,30 @@
 <% c++ #include "../src/logic/ViewContent.h" %>
 
 <% skin pci_skin %>
-	<% view new_solution_view uses ViewContent::NewSolutionContent extends template_view %>
-	
-	
-		<% template css_links() %>
-			<% include template_view::css_links() %>
-			<link href="/css/new_solution.css" rel="stylesheet" type="text/css" />
+	<% view new_solution_page_view uses ViewContent::NewSolutionPageContent extends page_template_view %>
+		
+		
+		<% template page_title() %>
 		<% end template %>
 		
 		
-		<% template js_links() %>
-			<% include template_view::js_links() %>
-			<script src="/lib/ckeditor/ckeditor.js"></script>
+		<% template head_content() %>
+			<% include page_template_view::head_content() %>
 		<% end template %>
 		
 		
-		<% template javascript_code() %>
-			<% include template_view::javascript_code() %>
-			<script>
-			$(document).ready(function(){
-				configureTexteditor('texteditor');
-			});
-			</script>
-		<% end template %>
-		
-	
-		<% template page_content() %>
-			<% include template_view::header_bar() %>
-			<% include template_view::navigation_menu() %>
-			<div class="main-container">
-				<div class="header-padding">
-					<% include create_solution_form(problem_id) using solution_services %>
-				</div>
+		<% template body_content() %>
+			<% include header_bar() using template_view %>
+			<% include navigation_menu() using template_view %>
+			<div class="narrow header-bar-padding" id="main-container">
+				New solution
 			</div>
 		<% end template %>
 		
-	
+		
+		<% template js_body_code() %>
+		<% end template %>
+		
+		
 	<% end view %>
 <% end skin %>
