--- a/tmpl/pages/SolutionPage.tmpl
+++ b/tmpl/pages/SolutionPage.tmpl
@@ -18,7 +18,9 @@
 			<% include header_bar() using template_view %>
 			<% include navigation_menu() using template_view %>
 			<div class="narrow header-bar-padding" id="main-container">
-				Solution
+				Esto es temporal:<br />
+				<%= solution->description %>
+				<%= solution->content %>
 			</div>
 		<% end template %>
 		
