--- a/www/css/template.css
+++ b/www/css/template.css
@@ -72,7 +72,7 @@ a, a:active, a:hover, a:visited {
 }
 
 #main-container.narrow {
-	margin-left: 132px;
+	margin-left: 136px;
 }
 
 .header-bar-padding {
@@ -230,3 +230,29 @@ a, a:active, a:hover, a:visited {
 	background-repeat: no-repeat;
 	box-shadow: 0px 0px 64px 0px #CCEACD inset;
 }
+
+
+
+
+
+
+
+
+.problem-description-box-container {
+	
+}
+
+.problem-votes-container {
+	
+}
+
+.problem-solved-tick {
+	
+}
+
+.problem-solved-tick.active {
+	
+}
+
+
+
